--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.3",
     "fastify": "^2.7.1",
     "fastify-static": "^2.5.0",
     "socket.io": "^2.2.0"
